- Fix DDD Outlet router path - Added DARF in DMOC Types

--- a/src/main/web/lib/components/community-pharmacy/ddd-outlet.edit.component.html
+++ b/src/main/web/lib/components/community-pharmacy/ddd-outlet.edit.component.html
@@ -27,11 +27,11 @@
                                     <mat-option [value]="'CPARP'">CPARP</mat-option>
                                     <mat-option [value]="'S-CARG'">S-CARG</mat-option>
                                     <mat-option [value]="'F-CARG'">F-CARG</mat-option>
-                                    <mat-option [value]="'Fast Track'">Fast Track</mat-option>
+                                    <mat-option [value]="'FAST_TRACK'">Fast Track</mat-option>
                                     <mat-option [value]="'CARC'">CARC</mat-option>
                                     <mat-option [value]="'DARF'">DARF</mat-option>
                                     <mat-option [value]="'ARC'">Adolescent Refill Club</mat-option>
-                                    <mat-option [value]="'Home Delivery'">Home Delivery</mat-option>
+                                    <mat-option [value]="'HOME_DELIVERY'">Home Delivery</mat-option>
                                 </mat-select>
                                 <mat-error
                                     *ngIf="type.errors && (type.dirty || type.touched) && (type.errors.required)">
